tablet overflow  issue fix

--- a/src/App.css
+++ b/src/App.css
@@ -277,7 +277,7 @@ h1 .logo {
   .content {
     width: 100%;
     max-width: 24rem;
-    padding: 2rem 2rem 0;
+    padding: 2rem 1.4rem 0;
     text-align: center;
     align-items: center;
   }
@@ -334,12 +334,12 @@ h1 .logo {
 
   .screenshot {
     min-width: auto;
-    width: 20rem;
+    width: 18rem;
     padding-right: 0;
     margin: 0 auto;
   }
   .screenshot img {
-    width: 20rem;
+    width: 16rem;
   }
 
   .faq-head {
